--- a/Selenium-PythonProjects/python-webui-testing/Pipfile
+++ b/Selenium-PythonProjects/python-webui-testing/Pipfile
@@ -5,11 +5,10 @@ verify_ssl = true
 
 [dev-packages]
 pytest = "*"
-autopep8 = "*"
-pylint = "<2.0.0"
 selenium = "*"
+pylint = "*"
 
 [packages]
 
 [requires]
-python_version = "2.7"
+python_version = "3.7"
