--- a/Selenium-PythonProjects/Formy Python Test Framework/Pipfile
+++ b/Selenium-PythonProjects/Formy Python Test Framework/Pipfile
@@ -6,8 +6,12 @@ verify_ssl = true
 [dev-packages]
 pytest = "*"
 selenium = "*"
+black = "*"
 
 [packages]
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
