--- a/Selenium-CSharpProjects/Formy CSharp Test Framework/Formy CSharp Test Framework.csproj
+++ b/Selenium-CSharpProjects/Formy CSharp Test Framework/Formy CSharp Test Framework.csproj
@@ -57,6 +57,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
