--- a/Selenium-CSharpProjects/Formy CSharp Test Framework/packages.config
+++ b/Selenium-CSharpProjects/Formy CSharp Test Framework/packages.config
@@ -2,9 +2,9 @@
 <packages>
   <package id="NUnit" version="3.12.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net472" />
+  <package id="Selenium.Firefox.WebDriver" version="0.27.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="85.0.4183.8700" targetFramework="net472" />
-  <package id="Selenium.WebDriver.GeckoDriver.Win64" version="0.27.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.IEDriver" version="3.150.1.2" targetFramework="net472" />
 </packages>
